--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,10 +10,10 @@
   <body>
     <div class="container">
       <ul>
-        <li class="test">Express Web 1</li>
-        <li>Express Web 1</li>
-        <li>Express Web 1</li>
-        <li>Express Web 1</li>
+        <li class="test">前往我的第一个照片墙</li>
+        <li>to be come.</li>
+        <li>to be come.</li>
+        <li>to be come.</li>
       </ul>
     </div>
     
